--- a/README.adoc
+++ b/README.adoc
@@ -84,7 +84,7 @@ Use *spaces* for indentation. No hard tabs.
 Use 2 spaces to indent the bodies of
 forms that have body parameters.  This covers all `def` forms, special
 forms and macros that introduce local bindings (e.g. `loop`, `let`,
-`when-let`) and many macros like `when`, `cond`, `+as->+`, `+cond->+`, `case`,
+`when-let`) and many macros like `when`, `cond`, `as->`, `cond->`, `case`,
 `with-*`, etc.
 
 [source,clojure]
@@ -734,7 +734,7 @@ Use `when-let` instead of `let` + `when`.
 
 === `if-not` [[if-not]]
 
-Use `if-not` instead of `+(if (not ...) ...)+`.
+Use `if-not` instead of `(if (not ...) ...)`.
 
 [source,clojure]
 ----
@@ -749,7 +749,7 @@ Use `if-not` instead of `+(if (not ...) ...)+`.
 
 === `when-not` [[when-not]]
 
-Use `when-not` instead of `+(when (not ...) ...)+`.
+Use `when-not` instead of `(when (not ...) ...)`.
 
 [source,clojure]
 ----
@@ -766,7 +766,7 @@ Use `when-not` instead of `+(when (not ...) ...)+`.
 
 === `when-not` vs `if-not` [[when-not-instead-of-single-branch-if-not]]
 
-Use `when-not` instead of `+(if-not ... (do ...))+`.
+Use `when-not` instead of `(if-not ... (do ...))`.
 
 [source,clojure]
 ----
@@ -784,7 +784,7 @@ Use `when-not` instead of `+(if-not ... (do ...))+`.
 
 === `not=` [[not-equal]]
 
-Use `not=` instead of `+(not (= ...))+`.
+Use `not=` instead of `(not (= ...))`.
 
 [source,clojure]
 ----
@@ -797,7 +797,7 @@ Use `not=` instead of `+(not (= ...))+`.
 
 === `printf` [[printf]]
 
-Use `printf` instead of `+(print (format ...))+`.
+Use `printf` instead of `(print (format ...))`.
 
 [source,clojure]
 ----
@@ -924,7 +924,7 @@ Leverage `partial` when doing so yields simpler code.
 
 === Threading Macros [[threading-macros]]
 
-Prefer the use of the threading macros `+->+` (thread-first) and `+->>+`
+Prefer the use of the threading macros `->` (thread-first) and `->>`
 (thread-last) to heavy form nesting.
 
 [source,clojure]
@@ -1257,7 +1257,7 @@ should end with an exclamation mark (e.g. `reset!`).
 
 === Arrow Instead Of To [[arrow-instead-of-to]]
 
-Use `+->+` instead of `to` in the names of conversion functions.
+Use `->` instead of `to` in the names of conversion functions.
 
 [source,clojure]
 ----
@@ -1461,7 +1461,7 @@ for more details.
 (Bar. 1 2)
 ----
 
-Note that `deftype` doesn't define the `+map->Type+`
+Note that `deftype` doesn't define the `map->Type`
   constructor. It's available only for records.
 
 === Custom Record Constructors [[custom-record-constructors]]
