Move the lint tools section where it belongs

--- a/README.adoc
+++ b/README.adoc
@@ -2065,18 +2065,6 @@ Be consistent. In an ideal world, be consistent with these guidelines.
 
 Use common sense.
 
-== Tooling
-
-There are some tools created by the Clojure community that might aid you
-in your endeavor to write idiomatic Clojure code.
-
-* https://github.com/technomancy/slamhound[Slamhound] is a tool that will
-automatically generate proper `ns` declarations from your existing code.
-* https://github.com/jonase/kibit[kibit] is a static code analyzer for
-Clojure which uses https://github.com/clojure/core.logic[core.logic] to
-search for patterns of code for which there might exist a more idiomatic
-function or macro.
-
 == Testing
 
 === Test Directory Structure [[test-directory-structure]]
@@ -2133,6 +2121,18 @@ https://github.com/stuartsierra/component[Component] provides
 core functionality, and
 https://github.com/stuartsierra/reloaded[reloaded] provides leiningen
 integration.
+
+== Lint Tools
+
+There are some lint tools created by the Clojure community that might aid you
+in your endeavor to write idiomatic Clojure code.
+
+* https://github.com/technomancy/slamhound[Slamhound] is a tool that will
+automatically generate proper `ns` declarations from your existing code.
+* https://github.com/jonase/kibit[kibit] is a static code analyzer for
+Clojure which uses https://github.com/clojure/core.logic[core.logic] to
+search for patterns of code for which there might exist a more idiomatic
+function or macro.
 
 == Contributing
 
