--- a/README.adoc
+++ b/README.adoc
@@ -434,7 +434,7 @@ Use a single empty line between top-level forms.
 (defn foo ...)
 ----
 
-An exception to the rule is the grouping of related `def`s together.
+An exception to the rule is the grouping of related ``def``s together.
 
 [source,clojure]
 ----
@@ -466,7 +466,7 @@ Use one file per namespace.
 === Comprehensive Ns Declaration [[comprehensive-ns-declaration]]
 
 Start every namespace with a comprehensive `ns` form, comprised of
-`refer`s, `require`s, and `import`s, conventionally in that order.
+``refer``s, ``require``s, and ``import``s, conventionally in that order.
 
 [source,clojure]
 ----
