--- a/README.adoc
+++ b/README.adoc
@@ -451,6 +451,7 @@ Do not place blank lines in the middle of a function or
 macro definition.  An exception can be made to indicate grouping of
 pairwise constructs as found in e.g. `let` and `cond`.
 
+[#80-character-limits]
 === Line Length [[line-length]]
 
 Where feasible, avoid making lines longer than 80 characters.
