Fix "shor forms" typo
Fixes a typo on the word "short" in the "short forms in cond" section.
Also fixes the same typo in the internal url.

--- a/README.adoc
+++ b/README.adoc
@@ -1034,7 +1034,7 @@ compile-time constants.
   :dunno)
 ----
 
-=== Shor Forms In Cond [[shor-forms-in-cond]]
+=== Short Forms In Cond [[short-forms-in-cond]]
 
 Use short forms in `cond` and related.  If not possible give visual
 hints for the pairwise grouping with comments or empty lines.
