--- a/README.adoc
+++ b/README.adoc
@@ -1993,12 +1993,12 @@ with appropriate punctuation. Sentences should be separated with a single space.
 ;; good
 (def foo
   "All sentences should end with a period (or maybe an exclamation mark).
-  The sentence should be followed by a space, unless it concludes the docstring")
+  The sentence should be followed by a space, unless it concludes the docstring.")
 
 ;; bad
 (def foo
   "all sentences should end with a period (or maybe an exclamation mark).
-  The sentence should be followed by a space, unless it concludes the docstring")
+  The sentence should be followed by a space, unless it concludes the docstring.")
 ----
 
 === Docstring Indentation [[docstring-indentation]]
