Rectify whitespace/punctuation and misplaced 'do'

--- a/README.adoc
+++ b/README.adoc
@@ -908,8 +908,8 @@ Favor the use of `complement` versus the use of an anonymous function.
 (filter #(not (some-pred? %)) coll)
 ----
 
-This rule should obviously be ignored if the complementing predicate
-  exists in the form of a separate function (e.g. `even?` and `odd?`).
+This rule should obviously be ignored if the complementing predicate 
+exists in the form of a separate function (e.g. `even?` and `odd?`).
 
 === `comp` [[comp]]
 
@@ -1196,7 +1196,7 @@ To access a private var (e.g. for testing), use the `@#'some.ns/var` form.
 
 === Attach Metadata Carefully [[attach-metadata-carefully]]
 
-Be careful regarding what exactly do you attach metadata to.
+Be careful regarding what exactly you attach metadata to.
 
 [source,clojure]
 ----
@@ -1228,7 +1228,7 @@ When naming namespaces favor the following two schemas:
 
 === Lisp Case Ns [[lisp-case-ns]]
 
-Use `lisp-case` in composite namespace segments(e.g. `bruce.project-euler`)
+Use `lisp-case` in composite namespace segments (e.g. `bruce.project-euler`).
 
 === Lisp Case [[lisp-case]]
 
